# sda_simulator

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile  api.rst  background.rst  conf.py  examples.rst  getting-started.md  index.rst  installation.rst  tutorial.rst  welcome.rst
examples/logistics/: PROBLEM.md  data.py  domain.py  network.py  policies.py  run.py  transition.py  visualize_demand.py  visualize_network.py
examples/ocel-simulated-inventory/: PROBLEM.md  domain.py  extract_policy_inputs.py  policy.py  run.py  sampler.py  transition.py  visualize_data.py  visualize_policies.py
examples/ocel-simulated-inventory/data/: 01_generate_simulation.py  02_database_to_ocel_csv.py  03_ocel_csv_to_ocel.py  04_postprocess_activities.py  05_ocel_csv_to_ocel.py  inventory_management.db  inventory_sampling_data.json  ocel_inventory_management.csv  ocel_inventory_management.xml  post_ocel_inventory_management.csv
src/sda_mc/: __init__.py
src/sda_mc/core/: __init__.py  evaluation.py  samplers.py  simulator.py  types.py
src/sda_mc/metrics/: __init__.py  base.py  comparison.py  console.py  constraints.py  cost.py  operational.py  reducers.py  registry.py  risk.py  runtime.py  service.py  statistical.py
tests/: test_logistics_smoke.py  test_metrics.py
