[project]
name = "sda-mc-simulator"
version = "0.1.0"
description = "Monte Carlo simulator for sequential decision problems using pluggable policies, transition models, and bootstrap exogenous samplers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.0",
  "rich>=15.0.0",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
tracking = ["wandb>=0.16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sda_mc"]

[tool.ruff]
line-length = 100
target-version = "py312"
